--- a/app/views/exam/_inactive_exam_groups.html.erb
+++ b/app/views/exam/_inactive_exam_groups.html.erb
@@ -1,5 +1,5 @@
 <div class="label-field-pair">
-   <label for="student_course">Select Exam Group:
+   <label for="student_course"><%= t('select_exam_group') %>:
 <%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader2", :style =>"display: none;" ) %>
    </label>
    <div class="text-input-bg">
