--- a/app/views/exam/_levels.html.erb
+++ b/app/views/exam/_levels.html.erb
@@ -1,6 +1,6 @@
 <div class="grades">
   <div class="label-field-pair">
-    <label for="configuration_grading_systems">Class Designations :</label>
+    <label for="configuration_grading_systems"><%= t('class_designations_text') %> :</label>
   </div>
   <div class="fee_category_scroll">
     <div class="sel-list">
@@ -16,7 +16,7 @@
 </div>
 <div class="grades">
   <div class="label-field-pair">
-    <label for="configuration_grading_systems">Ranking Levels :</label>
+    <label for="configuration_grading_systems"><%= t('ranking_levels_text') %>:</label>
   </div>
   <div class="fee_category_scroll">
     <div class="sel-list">
