--- a/app/views/exam/_select_batch.html.erb.erb
+++ b/app/views/exam/_select_batch.html.erb.erb
@@ -1,3 +1,3 @@
 <div class="label-field-pair">
-        <label for="student_course">Select a Batch :</label>
-        <div  class="text-input-bg"><%= select :report, :batch_id, @batches.map {|g| [g.name, g.id]}, {:prompt => "Select a Batch"}%></div></div>
+        <label for="student_course"><%= t('select_a_batch') %> :</label>
+        <div  class="text-input-bg"><%= select :report, :batch_id, @batches.map {|g| [g.name, g.id]}, {:prompt => "#{t('select_a_batch')}"}%></div></div>
