--- a/app/views/exam_reports/archived_batches_exam_report.html.erb
+++ b/app/views/exam_reports/archived_batches_exam_report.html.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <%= image_tag("/images/examination/show_exam.png") %>
-  <h1>Archived Exams1</h1>
-  <h3>Grouped Exam Reports</h3>
+  <h1><%= t('archived_exams1') %></h1>
+  <h3><%= t('grouped_exam_reports') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
