--- a/app/views/exam/_batch_select.html.erb
+++ b/app/views/exam/_batch_select.html.erb
@@ -1,7 +1,7 @@
 <div class="label-field-pair">
-  <label for="student_course">Select a Batch :</label>
+  <label for="student_course"><%= t('select_a_batch') %> :</label>
   <div  class="text-input-bg">
     <%= select :ranking_level_report, :batch_id,
       @batches.map {|b| [b.full_name, b.id]},
-      {:prompt => "select a batch"},{:onChange => "#{remote_function(:url => {:action => "select_report_type"},:with=>"'batch_id='+value")}"}%></div></div>
+      {:prompt => "#{t('select_a_batch')}"},{:onChange => "#{remote_function(:url => {:action => "select_report_type"},:with=>"'batch_id='+value")}"}%></div></div>
 <div id="report_type_select"></div>
