--- a/app/views/exam/_inactive_batch_list.html.erb
+++ b/app/views/exam/_inactive_batch_list.html.erb
@@ -1,6 +1,6 @@
 <div class="grades">
   <div class="label-field-pair">
-    <label for="configuration_grading_systems">Select Batches :</label>
+    <label for="configuration_grading_systems"><%= t('select_batches') %> :</label>
   </div>
   <div class="fee_category_scroll">
     <div class="sel-list">
