--- a/app/views/exam/_select_batch_group.html.erb
+++ b/app/views/exam/_select_batch_group.html.erb
@@ -1,4 +1,4 @@
 
 <div class="label-field-pair">
-        <label for="student_course">Select a Batch Group :</label>
-        <div  class="text-input-bg"><%= select :report, :batch_group_id, @batch_groups.map {|g| [g.name, g.id]}, {:prompt => "Select a Batch Group"}%></div></div>
+        <label for="student_course"><%= t('select_a_batch_group') %> :</label>
+        <div  class="text-input-bg"><%= select :report, :batch_group_id, @batch_groups.map {|g| [g.name, g.id]}, {:prompt => "#{t('select_a_batch_group')}"}%></div></div>
