--- a/app/views/exam/_subject_list.html.erb
+++ b/app/views/exam/_subject_list.html.erb
@@ -1,5 +1,5 @@
 <div class="label-field-pair">
-        <label for="student_course">Select a Subject :</label>
+        <label for="student_course"><%= t('select_a_subject') %> :</label>
         <div  class="text-input-bg">
           <%= select :ranking_level_report, :subject_id,
             @subjects.map {|b| [b.name, b.id]},
