--- a/app/views/exam/attendance_rank.html.erb
+++ b/app/views/exam/attendance_rank.html.erb
@@ -20,7 +20,7 @@
 <div id="content-header">
 <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
-  <h3>Student Ranking per Attendance</h3>
+  <h3><%= t('student_ranking_per_attendance') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -39,11 +39,11 @@
             Batch.active.map {|b| [b.full_name, b.id]},
             {:prompt => "#{t('select_a_batch')}"}%></div></div>
     <div class="label-field-pair">
-        <label for="student_course">Select Start Date :</label>
-        <div  class="text-input-bg"><%= calendar_date_select_tag 'attendance_rank[start_date]', I18n.l(Date.today,:format=>:normal), :popup=>:force %></div></div>
+        <label for="student_course"><%= t('select_start_date') %>:</label>
+        <div  class="text-input-bg"><%= calendar_date_select_tag 'attendance_rank[start_date]', I18n.l(Date.today,:format=>:default), :popup=>:force %></div></div>
         <div class="label-field-pair">
-        <label for="student_course">Select End Date :</label>
-        <div  class="text-input-bg"><%= calendar_date_select_tag 'attendance_rank[end_date]', I18n.l(Date.today,:format=>:normal), :popup=>:force %></div></div>
+        <label for="student_course"><%= t('select_end_date') %>:</label>
+        <div  class="text-input-bg"><%= calendar_date_select_tag 'attendance_rank[end_date]', I18n.l(Date.today,:format=>:default), :popup=>:force %></div></div>
       <%= submit_tag "", :value => "► #{t('view')}", :class => "submit_button" %>
     <% end %>
     <div class="extender"></div>
