--- a/app/views/exam/combined_report.html.erb
+++ b/app/views/exam/combined_report.html.erb
@@ -20,7 +20,7 @@
 <div id="content-header">
   <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
-  <h3>Combined Report</h3>
+  <h3><%= t('combined_report') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
