--- a/app/views/exam/course_rank.html.erb
+++ b/app/views/exam/course_rank.html.erb
@@ -20,7 +20,7 @@
 <div id="content-header">
   <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
-  <h3>Student Ranking per Course</h3>
+  <h3><%= t('student_ranking_per_course') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -33,11 +33,11 @@
 
     <% form_for :course_rank, :url=>{:action=>'student_course_rank'} do |x| %>
       <div class="label-field-pair">
-        <label for="student_course">Select a Course :</label>
+        <label for="student_course"><%= t('select_a_course') %>:</label>
         <div  class="text-input-bg">
           <%= select :course_rank, :course_id,
             Course.active.map {|b| [b.full_name, b.id]},
-            {:prompt => "select a course"},{:onChange => "#{remote_function(:url => {:action => "batch_groups"}, :with => "'course_id='+value")}"}%></div></div>
+            {:prompt => "#{t('select_a_course')}"},{:onChange => "#{remote_function(:url => {:action => "batch_groups"}, :with => "'course_id='+value")}"}%></div></div>
         <div id="batch_group_list"></div>
         <%= submit_tag "", :value => "► #{t('view')}", :class => "submit_button" %>
       <% end %>
