--- a/app/views/exam/create_exam.html.erb
+++ b/app/views/exam/create_exam.html.erb
@@ -27,7 +27,7 @@
 </div>
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "Previous Batch Exam", {:controller => "exam", :action => "previous_batch_exams"}, :class=> 'user_button' %></li>
+    <li><%= link_to "#{t('previous_batch_exam')}", {:controller => "exam", :action => "previous_batch_exams"}, :class=> 'user_button' %></li>
   </ul>
 </div>
 <div id="page-yield">
