--- a/app/views/exam/generate_reports.html.erb
+++ b/app/views/exam/generate_reports.html.erb
@@ -20,14 +20,14 @@
 <div id="content-header">
 <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
-  <h3>Generate Reports</h3>
+  <h3><%= t('generate_reports') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "Generate Previous Reports", {:controller => "exam", :action => "generate_previous_reports"}, :class=> 'user_button' %></li>
+    <li><%= link_to "#{t('generate_previous_reports')}", {:controller => "exam", :action => "generate_previous_reports"}, :class=> 'user_button' %></li>
   </ul>
 </div>
 <div id="page-yield">
@@ -38,12 +38,12 @@
 
     <% form_for :report  do |x| %>
       <div class="label-field-pair">
-        <label for="student_course">Select a Course :</label>
+        <label for="student_course"><%= t('select_a_course') %> :</label>
         <div  class="text-input-bg">
           <%= select :report, :course_id,
-            Course.active.map {|b| [b.full_name, b.id]},{:prompt => "Select a Course"},{:onChange => "#{remote_function(:url => {:action => "list_batch_groups"}, :with => "'course_id='+value")}"}%></div></div>
+            Course.active.map {|b| [b.full_name, b.id]},{:prompt => "#{t('select_a_course')}"},{:onChange => "#{remote_function(:url => {:action => "list_batch_groups"}, :with => "'course_id='+value")}"}%></div></div>
         <div id="batch_group_list"></div>
-      <%= submit_tag "", :value => "► Generate", :class => "submit_button" %>
+      <%= submit_tag "", :value => "►#{t('generate')}", :class => "submit_button" %>
     <% end %>
     <div class="extender"></div>
   </div></div>
