--- a/app/views/exam/student_attendance_rank.html.erb
+++ b/app/views/exam/student_attendance_rank.html.erb
@@ -20,7 +20,7 @@
 <div id="content-header">
   <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
-  <h3>Student Ranking per Attendance</h3>
+  <h3><%= t('student_ranking_per_attendance') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -38,7 +38,7 @@
   <% end %>
 
   <div class="box">
-    <h4>Overall Rankings per Attendance : <%= @batch.name %> - <%= @batch.course.full_name %> | <%=@start_date%> - <%=@end_date%></h4>
+    <h4><%= t('overall_ranking_per_attendance') %> : <%= @batch.name %> - <%= @batch.course.full_name %> | <%=@start_date%> - <%=@end_date%></h4>
     <div id="score-table">
       <% unless @students.empty? %>
         <% working_days = @batch.find_working_days(@start_date,@end_date).count %>
@@ -64,13 +64,13 @@
         <% ordered_percentages = ordered_percentages.compact.uniq.sort.reverse %>
         <table id="listing" width="100%" cellpadding="1" cellspacing="1">
           <tr class="tr-head">
-            <td>Sl No.</td>
+            <td><%= t('sl_no') %></td>
             <td><%= t('name') %></td>
-            <td>Adm No.</td>
-            <td>Working Days</td>
-            <td>Attended</td>
-            <td>Percentage</td>
-            <td>Rank</td>
+            <td><%= t('adm_no') %></td>
+            <td><%= t('working_days') %></td>
+            <td><%= t('attended') %></td>
+            <td><%= t('percentage') %></td>
+            <td><%= t('rank') %></td>
           </tr>
           <% @students.each_with_index do |student,i| %>
             <% stu_percentage = 0 %>
@@ -94,10 +94,10 @@
           <% end %>
         </table>
       <% else %>
-        <p class="flash-msg"> No Working Days for this Batch. </p>
+        <p class="flash-msg"><%= t('no_working_days_for_this_batch') %></p>
       <% end %>
       <% else %>
-        <p class="flash-msg"> No students in this Batch. </p>
+        <p class="flash-msg"><%= t('no_students_in_this_batch') %></p>
       <% end %>
     </div>
     <div class="extender"></div>
