--- a/app/views/exam/student_batch_rank.html.erb
+++ b/app/views/exam/student_batch_rank.html.erb
@@ -20,7 +20,7 @@
 <div id="content-header">
   <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
-  <h3>Student Ranking per Batch</h3>
+  <h3><%= t('student_ranking_per_batch') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -38,7 +38,7 @@
   <% end %>
 
   <div class="box">
-    <h4>Overall Rankings : <%= @batch.name %> - <%= @batch.course.full_name %></h4>
+    <h4><%= t('overall_rankings') %> : <%= @batch.name %> - <%= @batch.course.full_name %></h4>
     <div id="score-table">
       <% unless @students.empty? %>
         <% unless @grouped_exams.empty? %>
@@ -56,11 +56,11 @@
           <% ordered_scores = ordered_scores.compact.uniq.sort.reverse %>
           <table id="listing" width="100%" cellpadding="1" cellspacing="1">
             <tr class="tr-head">
-              <td>Sl No.</td>
+              <td><%= t('sl_no') %></td>
               <td><%= t('name') %></td>
-              <td>Adm No.</td>
-              <td>Marks</td>
-              <td>Rank</td>
+              <td><%= t('adm_no') %></td>
+              <td><%= t('marks') %></td>
+              <td><%= t('rank') %></td>
             </tr>
             <% @students.each_with_index do |student,i| %>
               <% marks = 0 %>
@@ -79,10 +79,10 @@
             <% end %>
           </table>
         <% else %>
-          <p class="flash-msg"> No grouped exams for this Batch. </p>
+          <p class="flash-msg"><%= t('no_grouped_exams_for_this_batch') %> </p>
         <% end %>
       <% else %>
-        <p class="flash-msg"> No Students for this Batch. </p>
+        <p class="flash-msg"><%= t('no_students_for_this_batch') %></p>
       <% end %>
     </div>
     <div class="extender"></div>
