--- a/app/views/exam/student_batch_rank_pdf.html.erb
+++ b/app/views/exam/student_batch_rank_pdf.html.erb
@@ -24,7 +24,7 @@
   <div class="extender"> </div>
   <div class="report">
     <div id ="main_info">
-      <h3>Overall Batch Rankings : <%= @batch.name %> - <%= @batch.course.full_name %></h3>
+      <h3><%= t('overall_batch_rankings') %> : <%= @batch.name %> - <%= @batch.course.full_name %></h3>
     </div>
     <div id="pdf-info">
       <% unless @students.empty? %>
@@ -44,11 +44,11 @@
           <% c = 'even' %>
           <table id="pdf-table" width="100%" cellspacing="0">
             <tr class="table-header">
-              <td>Sl No.</td>
+              <td><%= t('sl_no') %></td>
               <td><%= t('name') %></td>
-              <td>Adm No.</td>
-              <td>Marks</td>
-              <td>Rank</td>
+              <td><%= t('adm_no') %></td>
+              <td><%= t('marks') %></td>
+              <td><%= t('rank') %></td>
             </tr>
             <% i = 0 %>
             <% @students.each_with_index do |student,ind| %>
@@ -58,11 +58,11 @@
                 <tr class="page-break"><td colspan="3"></td></tr>
 
                 <tr class="table-header">
-                  <td>Sl No.</td>
+                  <td><%= t('sl_no') %></td>
                   <td><%= t('name') %></td>
-                  <td>Adm No.</td>
-                  <td>Marks</td>
-                  <td>Rank</td>
+                  <td><%= t('adm_no') %></td>
+                  <td><%= t('marks') %></td>
+                  <td><%= t('rank') %></td>
                 </tr>
 
               <% end %>
@@ -82,10 +82,10 @@
             <% end %>
           </table>
         <% else %>
-          <p class="flash-msg"> No grouped exams for this Batch. </p>
+          <p class="flash-msg"><%= t('no_grouped_exams_for_this_batch') %></p>
         <% end %>
       <% else %>
-        <p class="flash-msg"> No students for this Batch. </p>
+        <p class="flash-msg"><%= t('no_students_for_this_batch') %></p>
       <% end %>
     </div>
   </div>
