--- a/app/views/exam/student_combined_report_pdf.html.erb
+++ b/app/views/exam/student_combined_report_pdf.html.erb
@@ -1,8 +1,8 @@
 <div id="page-yield">
 
   <div class="hor_line"></div>
-  <h2 align="center">Combined Report</h2>
-  <h3 align="center">Batch : <%= @batch.full_name %></h3>
+  <h2 align="center"><%= t('combined_report') %></h2>
+  <h3 align="center"><%= t('batch') %> : <%= @batch.full_name %></h3>
   <div class="hor_line"></div>
   <div class="extender"> </div>
   <div class="report">
@@ -33,15 +33,15 @@
               <% c= 'even' %>
               <% unless designated_students.empty? %>
                 <tr class="table-header">
-                  <td>Sl No.</td>
-                  <td>Adm No.</td>
-                  <td>Name</td>
+                  <td><%= t('sl_no') %></td>
+                  <td><%= t('adm_no') %></td>
+                  <td><%= t('name') %></td>
                   <% if @batch.grading_type == "2" %>
-                    <td>CWA</td>
+                    <td><%= t('cwa') %></td>
                   <% elsif @batch.grading_type == "1" %>
-                    <td>CGPA</td>
+                    <td><%= t('cgpa') %></td>
                   <% else %>
-                    <td>Percentage</td>
+                    <td><%= t('percentage') %></td>
                   <% end %>
                 </tr>
                 <% designated_students.each_with_index do|s,i| %>
@@ -55,7 +55,7 @@
                 <% end %>
               <% else %>
                 <tr class="table-header">
-                  <td>No Students for this Class Designation.</td>
+                  <td><%= t('no_students_for_this_class_designation') %></td>
                 </tr>
               <% end %>
             </table>
@@ -63,7 +63,7 @@
         <% end %>
         <% unless @levels.blank? %>
           <% @levels.each do|level| %>
-            <h4 align="center"><%= level.name %> Students</h4>
+            <h4 align="center"><%= level.name %><%= t('students') %></h4>
             <% unless level.subject_count.nil? %>
               <% scores = GroupedExamReport.find(:all,:conditions=>{:student_id=>@students.collect(&:id),:score_type=>"s"}) %>
             <% else %>
@@ -158,17 +158,17 @@
               <% c= 'even' %>
               <% unless ranked_students.empty? %>
                 <tr class="table-header">
-                  <td>Sl No.</td>
-                  <td>Adm No.</td>
-                  <td>Name</td>
+                  <td><%= t('sl_no') %></td>
+                  <td><%= t('adm_no') %></td>
+                  <td><%= t('name') %></td>
                   <% if @batch.grading_type == "2" %>
-                    <td>CWA</td>
+                    <td><%= t('cwa') %></td>
                   <% elsif @batch.grading_type == "1" %>
-                    <td>CGPA</td>
+                    <td><%= t('cgpa') %></td>
                   <% else %>
-                    <td>Percentage</td>
+                    <td><%= t('percentage') %></td>
                   <% end %>
-                  <td>Courses <%= level.name %></td>
+                  <td><%= t('courses_text') %><%= level.name %></td>
                 </tr>
                 <% ranked_students.each_with_index do|r,ind| %>
                   <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
@@ -190,7 +190,7 @@
                 <% end %>
               <% else %>
                 <tr class="table-header">
-                  <td>No Students for this Ranking Level.</td>
+                  <td><%= t('no_students_for_this_ranking_level') %></td>
                 </tr>
               <% end %>
             </table>
