--- a/app/views/exam/student_school_rank_pdf.html.erb
+++ b/app/views/exam/student_school_rank_pdf.html.erb
@@ -24,7 +24,7 @@
   <div class="extender"> </div>
   <div class="report">
     <div id ="main_info">
-      <h3>Overall School Rankings : <%= Configuration.find_by_config_key("InstitutionName").config_value.present? ? Configuration.find_by_config_key("InstitutionName").config_value : "-" %></h3>
+      <h3><%= t('overall_school_rankings') %> : <%= Configuration.find_by_config_key("InstitutionName").config_value.present? ? Configuration.find_by_config_key("InstitutionName").config_value : "-" %></h3>
     </div>
     <div id="pdf-info">
       <% unless @courses.empty? %>
@@ -45,12 +45,12 @@
           <% c = 'even' %>
           <table id="pdf-table" width="100%" cellspacing="0">
             <tr class="table-header">
-              <td>Sl No.</td>
+              <td><%= t('sl_no') %></td>
               <td><%= t('name') %></td>
-              <td>Batch</td>
-              <td>Adm No.</td>
-              <td>Marks</td>
-              <td>Rank</td>
+              <td><%= t('batch') %></td>
+              <td><%= t('adm_no') %></td>
+              <td><%= t('marks') %></td>
+              <td><%= t('rank') %></td>
             </tr>
             <% i = 0 %>
             <% @students.each_with_index do |student,ind| %>
@@ -60,12 +60,12 @@
                 <tr class="page-break"><td colspan="3"></td></tr>
 
                 <tr class="table-header">
-                  <td>Sl No.</td>
+                  <td><%= t('sl_no') %></td>
                   <td><%= t('name') %></td>
-                  <td>Batch</td>
-                  <td>Adm No.</td>
-                  <td>Marks</td>
-                  <td>Rank</td>
+                  <td><%= t('batch') %></td>
+                  <td><%= t('adm_no') %></td>
+                  <td><%= t('marks') %></td>
+                  <td><%= t('rank') %></td>
                 </tr>
 
               <% end %>
@@ -86,13 +86,13 @@
             <% end %>
           </table>
       <% else %>
-          <p class="flash-msg"> No Grouped Exams for this School. </p>
+          <p class="flash-msg"><%= t('no_grouped_exams_in_this_school') %></p>
         <% end %>
         <% else %>
-          <p class="flash-msg"> No Students for this School. </p>
+          <p class="flash-msg"><%= t('no_students_in_this_school') %></p>
         <% end %>
       <% else %>
-        <p class="flash-msg"> No Courses for this School. </p>
+        <p class="flash-msg"><%= t('no_courses_for_this_school') %></p>
       <% end %>
     </div>
   </div>
