--- a/app/views/exam/student_subject_rank_pdf.html.erb
+++ b/app/views/exam/student_subject_rank_pdf.html.erb
@@ -24,7 +24,7 @@
   <div class="extender"> </div>
   <div class="report">
     <div id ="main_info">
-      <h3>Subject Rankings - <%= @subject.name %></h3>
+      <h3><%= t('subjects_rankings') %> - <%= @subject.name %></h3>
       <h4>  <%= @batch.name %> - <%= @batch.course.full_name %> </h4>
     </div>
     <% ranks = [] %>
@@ -38,7 +38,7 @@
       <% c = 'even' %>
       <table id="pdf-table" width="100%" cellspacing="0">
         <tr class="table-header">
-          <td>Adm No.</td>
+          <td><%= t('adm_no') %></td>
           <td><%= t('name') %></td>
           <% @exam_groups.each do |exam_group| %>
             <td><%= exam_group.name %></td>
@@ -51,7 +51,7 @@
             <tr class="page-break"><td colspan="3"></td></tr>
 
             <tr class="table-header">
-              <td>Adm No.</td>
+              <td><%= t('adm_no') %></td>
               <td><%= t('name') %></td>
               <% @exam_groups.each do |exam_group| %>
                 <td><%= exam_group.name %></td>
