--- a/app/views/exam_reports/_batch_select.html.erb
+++ b/app/views/exam_reports/_batch_select.html.erb
@@ -5,7 +5,7 @@
 
 <%= select :exam_report, :batch_id,
         @batches.map {|b| [b.full_name, b.id]},
-        {:prompt => 'Select a batch'},
+        {:prompt => "#{t('select_a_batch')}"},
         {:onChange => "#{remote_function(:url => {:controller => "exam",:action => "list_exam_types"},
         :with => "'batch_id='+value",
         :before => "Element.show('loader')",
