--- a/app/views/exam_reports/_grouped_exam_report.erb
+++ b/app/views/exam_reports/_grouped_exam_report.erb
@@ -19,12 +19,12 @@
       <tr class="tr-head">
         <td><%= t('subject') %></td>
         <% if @batch.grading_type=="1" or @batch.grading_type=="2" %>
-          <td>Credit</td>
+          <td><%= t('credit') %></td>
         <% end %>
         <% @exam_groups.each do |exam_group| %>
           <td><%= exam_group.name %></td>
         <% end %>
-        <td>Combined</td>
+        <td><%= t('combined') %></td>
       </tr>
       <% @subjects.each do |subject| %>
         <tr class="tr-<%= cycle('odd', 'even') %>">
@@ -59,11 +59,11 @@
       <tr class="tr-blank"></tr>
       <tr class="tr-head">
         <% if @batch.grading_type=="1" %>
-          <td colspan="2" align="right">GPA</td>
+          <td colspan="2" align="right"><%= t('gpa') %></td>
         <% elsif @batch.grading_type=="2" %>
-          <td colspan="2" align="right">Weighted Average</td>
+          <td colspan="2" align="right"><%= t('weighted_average') %></td>
         <% else %>
-          <td align="right">Percentage</td>
+          <td align="right"><%= t('percentage') %></td>
         <% end %>
         <% @exam_groups.each do |exam_group| %>
           <% exam_total = GroupedExamReport.find_by_student_id_and_exam_group_id_and_score_type(@student.id,exam_group.id,"e") %>
