--- a/app/views/exam_reports/_inactive_batches.html.erb
+++ b/app/views/exam_reports/_inactive_batches.html.erb
@@ -1,5 +1,5 @@
 <%= select :exam_report, :batch_id,
             @batches.map {|b| [b.full_name, b.id]},
-            {:prompt => 'Select a Batch'},{:onChange => "#{remote_function(:url => {:action => "final_archived_report_type"},
+            {:prompt => "#{t('select_a_batch')}"},{:onChange => "#{remote_function(:url => {:action => "final_archived_report_type"},
             :with => "'batch_id='+value"
             )}"} %>
