--- a/app/views/exam_reports/archived_exam_wise_report.html.erb
+++ b/app/views/exam_reports/archived_exam_wise_report.html.erb
@@ -5,8 +5,8 @@
 
 <div id="content-header">
   <img src="/images/examination/show_exam.png" alt="Exam" />
-  <h1>Exam Reports1</h1>
-  <h3>Archived Grouped Exam Reports</h3>
+  <h1><%= t('exam_reports1') %></h1>
+  <h3><%= t('archived_grouped_exam_reports') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -20,7 +20,7 @@
   <div class="box">
     <% form_for :exam_report, :url=>{:action=>'archived_batches_exam_report'} do |x| %>
       <div class="label-field-pair">
-        <label>Select a Course :<%= image_tag("loader.gif",
+        <label><%= t('select_a_course') %> :<%= image_tag("loader.gif",
             :align => "absmiddle",
             :border => 0,
             :id => "loader",
@@ -28,7 +28,7 @@
         <div class="text-input-bg">
           <%= select :exam_report, :course_id,
             @courses.map {|c| [c.full_name, c.id]},
-            {:prompt => 'Select a course'},
+            {:prompt => "#{t('select_a_course')}"},
             {:onChange => "#{remote_function(:url => {:controller => "exam_reports",:action => "list_inactivated_batches"},
             :with => "'course_id='+value",
             :before => "Element.show('loader')",
@@ -37,17 +37,17 @@
         </div>
       </div>
     <div class="label-field-pair">
-      <label>Select a Batch :</label>
+      <label><%= t('select_a_batch') %> :</label>
       <div class="text-input-bg"><div id="inactive_batches">
           <%= select :exam_report, :batch_id,
             @batches.map {|b| [b.full_name, b.id]},
-            {:prompt => 'Select a Batch'},{:onChange => "#{remote_function(:url => {:action => "final_archived_report_type"},
+            {:prompt => "#{t('select_a_batch')}"},{:onChange => "#{remote_function(:url => {:action => "final_archived_report_type"},
             :with => "'batch_id='+value"
             )}"} %></div></div>
     </div>
     <div id="archived_report_type"></div>
 
-      <%= submit_tag "", :value => "► View", :class => "submit_button" %>
+      <%= submit_tag "", :value => "►#{t('view')}", :class => "submit_button" %>
 
     <% end %>
 
